# microservice-fastapi

./: hello.py  makefile  pyproject.toml  test.db
src/: authors.py  books.py  database.py  main.py  models.py
