[project]
name = "microservice-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.2.1",
    "fastapi[all]==0.115.6",
    "pydantic==2.10.4",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn==0.34.0",
]
